[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore APi"
authors = ["edumarques7 <marques.barbosa@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2.3"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
